--- a/Account_/PC_Inner_Info_ViewController.xib
+++ b/Account_/PC_Inner_Info_ViewController.xib
@@ -24,6 +24,8 @@
                 <outlet property="phone" destination="4TG-yY-Ruw" id="IPg-QJ-EjM"/>
                 <outlet property="rePassBG" destination="rS3-U7-S5i" id="4Lq-PM-G3Q"/>
                 <outlet property="rePassError" destination="KOL-GT-sok" id="SSo-b4-UsZ"/>
+                <outlet property="sideGapLeft" destination="GNA-k7-JRf" id="xaz-8B-sW1"/>
+                <outlet property="sideGapRight" destination="6oF-5R-zLh" id="xTM-Fp-TPs"/>
                 <outlet property="submit" destination="ZBX-Aa-Lpo" id="qdd-sw-9cd"/>
                 <outlet property="tableView" destination="EcH-8A-Ufc" id="57Z-bu-a0C"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
