--- a/Tabbar_/TG_Room_Cell_0.xib
+++ b/Tabbar_/TG_Room_Cell_0.xib
@@ -51,7 +51,7 @@
                         <state key="normal" title="XEM THÊM"/>
                     </button>
                 </subviews>
-                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="FSu-2x-Pw1" firstAttribute="top" secondItem="u3d-QL-GpC" secondAttribute="top" id="31a-29-Sgt"/>
                     <constraint firstAttribute="trailing" secondItem="gom-Vd-Ca8" secondAttribute="trailing" constant="10" id="6rR-Tj-7tk"/>
