--- a/Tabbar_/TG_Room_Cell_10.xib
+++ b/Tabbar_/TG_Room_Cell_10.xib
@@ -51,7 +51,7 @@
                         <state key="normal" title="XEM THÊM"/>
                     </button>
                 </subviews>
-                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="DZx-Sf-dS4" secondAttribute="trailing" constant="10" id="4Do-W3-QgN"/>
                     <constraint firstItem="tNz-iS-CxL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="4Qe-kY-qvP"/>
