--- a/Account_/PC_ChangePass_ViewController.xib
+++ b/Account_/PC_ChangePass_ViewController.xib
@@ -50,12 +50,12 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đổi mật khẩu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYA-Jo-Znz">
-                            <rect key="frame" x="151" y="21" width="112" height="22"/>
+                            <rect key="frame" x="150" y="21" width="114.5" height="22"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="81.5" id="m3d-sP-lbC"/>
                                 <constraint firstAttribute="height" constant="22" id="z9F-g9-2GF"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
